--- a/MovieCLI/MovieCLI.csproj
+++ b/MovieCLI/MovieCLI.csproj
@@ -14,7 +14,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Data\MovieCache.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="Data\MovieNames.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
