Added Finnish movie dataset

--- a/MovieCLI/MovieCLI.csproj
+++ b/MovieCLI/MovieCLI.csproj
@@ -19,6 +19,9 @@
     <None Update="Data\MovieNames.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\MoviesFI.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
